[package]
name = "pact_verifier_cli"
version = "1.2.1"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2024"
description = "Standalone pact verifier for provider pact verification"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_verifier_cli"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart", "junit"]
datetime = ["pact_models/datetime", "pact_verifier/datetime"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact_verifier/xml"] # support for matching XML documents
plugins = ["pact_verifier/plugins"]
multipart = ["pact_verifier/multipart"] # support for MIME multipart bodies
junit = ["dep:junit-report", "dep:strip-ansi-escapes"] # support for Junit format reports

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["cargo", "env"] }
env_logger = "0.11.8"
junit-report = { version = "0.8.3", optional = true }
lazy_static = "1.5.0"
log = "0.4.27"
maplit = "1.0.2"
pact_models = { version = "~1.3.6", default-features = false }
pact_verifier = { version = "~1.3.2", path = "../pact_verifier", default-features = false }
regex = "1.11.1"
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
serde_json = "1.0.140"
strip-ansi-escapes = { version = "0.2.1", optional = true }
time = "0.3.41"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing-log"] }
tempfile = "3.20.0"

[dev-dependencies]
expectest = "0.12.0"
rstest = "0.24.0"
tempfile = "3.20.0"
trycmd = "0.15.9"
